// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> Alert story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorAlert"
>
  <div
    class="iconContainer iconAlert"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        alert
      </title>
      <path
        d="M0,0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> AlertDismissable story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal dismissable colorAlert"
>
  <button
    class="dismiss button sizeLarge variantPlain colorAlert"
    type="button"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      viewBox="0 0 24 24"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss banner
      </title>
      <path
        d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconAlert"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        alert
      </title>
      <path
        d="M0,0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Brand story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        attention
      </title>
      <path
        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-1.29 1.29c-.63.63-.19 1.71.7 1.71h13.17c.89 0 1.34-1.08.71-1.71L18 16z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> BrandDismissable story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal dismissable colorBrand"
>
  <button
    class="dismiss button sizeLarge variantPlain colorBrand"
    type="button"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      viewBox="0 0 24 24"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss banner
      </title>
      <path
        d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        attention
      </title>
      <path
        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-1.29 1.29c-.63.63-.19 1.71.7 1.71h13.17c.89 0 1.34-1.08.71-1.71L18 16z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> DismissableWithAction story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal dismissable colorBrand"
>
  <button
    class="dismiss button sizeLarge variantPlain colorBrand"
    type="button"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      viewBox="0 0 24 24"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss banner
      </title>
      <path
        d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        attention
      </title>
      <path
        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-1.29 1.29c-.63.63-.19 1.71.7 1.71h13.17c.89 0 1.34-1.08.71-1.71L18 16z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
    <div
      class="action horizontal"
    >
      <button
        class="button sizeLarge variantOutline colorBrand"
        style="white-space: nowrap;"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Elevation0 story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal elevation0 colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        attention
      </title>
      <path
        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-1.29 1.29c-.63.63-.19 1.71.7 1.71h13.17c.89 0 1.34-1.08.71-1.71L18 16z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Neutral story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorNeutral"
>
  <div
    class="iconContainer iconNeutral"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        notice
      </title>
      <path
        d="M20 6h-1v8c0 .55-.45 1-1 1H6v1c0 1.1.9 2 2 2h10l4 4V8c0-1.1-.9-2-2-2zm-3 5V4c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v13l4-4h9c1.1 0 2-.9 2-2z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> NeutralDismissable story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal dismissable colorNeutral"
>
  <button
    class="dismiss button sizeLarge variantPlain colorNeutral"
    type="button"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      viewBox="0 0 24 24"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss banner
      </title>
      <path
        d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconNeutral"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        notice
      </title>
      <path
        d="M20 6h-1v8c0 .55-.45 1-1 1H6v1c0 1.1.9 2 2 2h10l4 4V8c0-1.1-.9-2-2-2zm-3 5V4c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v13l4-4h9c1.1 0 2-.9 2-2z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> NoContent story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        attention
      </title>
      <path
        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-1.29 1.29c-.63.63-.19 1.71.7 1.71h13.17c.89 0 1.34-1.08.71-1.71L18 16z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
    </div>
  </div>
</article>
`;

exports[`<Banner /> NoHeadingShort story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        attention
      </title>
      <path
        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-1.29 1.29c-.63.63-.19 1.71.7 1.71h13.17c.89 0 1.34-1.08.71-1.71L18 16z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Success story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorSuccess"
>
  <div
    class="iconContainer iconSuccess"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        success
      </title>
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.9959.9959 0 010-1.41c.39-.39 1.02-.39 1.41 0L10 14.17l6.88-6.88c.39-.39 1.02-.39 1.41 0 .39.39.39 1.02 0 1.41l-7.59 7.59c-.38.39-1.02.39-1.41 0z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> SuccessDismissable story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal dismissable colorSuccess"
>
  <button
    class="dismiss button sizeLarge variantPlain colorSuccess"
    type="button"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      viewBox="0 0 24 24"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss banner
      </title>
      <path
        d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconSuccess"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        success
      </title>
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM9.29 16.29L5.7 12.7a.9959.9959 0 010-1.41c.39-.39 1.02-.39 1.41 0L10 14.17l6.88-6.88c.39-.39 1.02-.39 1.41 0 .39.39.39 1.02 0 1.41l-7.59 7.59c-.38.39-1.02.39-1.41 0z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Vertical story renders snapshot 1`] = `
<article
  class="bannerDialog colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        attention
      </title>
      <path
        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-1.29 1.29c-.63.63-.19 1.71.7 1.71h13.17c.89 0 1.34-1.08.71-1.71L18 16z"
      />
    </svg>
  </div>
  <div
    class="textAndAction"
  >
    <div
      class="textContent"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> VerticalDismissable story renders snapshot 1`] = `
<article
  class="bannerDialog dismissable colorBrand"
>
  <button
    class="dismiss button sizeLarge variantPlain colorBrand"
    type="button"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      viewBox="0 0 24 24"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss banner
      </title>
      <path
        d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        attention
      </title>
      <path
        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-1.29 1.29c-.63.63-.19 1.71.7 1.71h13.17c.89 0 1.34-1.08.71-1.71L18 16z"
      />
    </svg>
  </div>
  <div
    class="textAndAction"
  >
    <div
      class="textContent"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> VerticalDismissableWithAction story renders snapshot 1`] = `
<article
  class="bannerDialog dismissable colorBrand"
>
  <button
    class="dismiss button sizeLarge variantPlain colorBrand"
    type="button"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      viewBox="0 0 24 24"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss banner
      </title>
      <path
        d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        attention
      </title>
      <path
        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-1.29 1.29c-.63.63-.19 1.71.7 1.71h13.17c.89 0 1.34-1.08.71-1.71L18 16z"
      />
    </svg>
  </div>
  <div
    class="textAndAction"
  >
    <div
      class="textContent"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
    <div
      class="action"
    >
      <button
        class="button sizeLarge variantOutline colorBrand"
        style="white-space: nowrap;"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> VerticalElevation0 story renders snapshot 1`] = `
<article
  class="bannerDialog elevation0 colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        attention
      </title>
      <path
        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-1.29 1.29c-.63.63-.19 1.71.7 1.71h13.17c.89 0 1.34-1.08.71-1.71L18 16z"
      />
    </svg>
  </div>
  <div
    class="textAndAction"
  >
    <div
      class="textContent"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> VerticalWithAction story renders snapshot 1`] = `
<article
  class="bannerDialog colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        attention
      </title>
      <path
        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-1.29 1.29c-.63.63-.19 1.71.7 1.71h13.17c.89 0 1.34-1.08.71-1.71L18 16z"
      />
    </svg>
  </div>
  <div
    class="textAndAction"
  >
    <div
      class="textContent"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
    <div
      class="action"
    >
      <button
        class="button sizeLarge variantOutline colorBrand"
        style="white-space: nowrap;"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Warning story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorWarning"
>
  <div
    class="iconContainer iconWarning"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        warning
      </title>
      <path
        d="M4.47 21h15.06c1.54 0 2.5-1.67 1.73-3L13.73 4.99c-.77-1.33-2.69-1.33-3.46 0L2.74 18c-.77 1.33.19 3 1.73 3zM12 14c-.55 0-1-.45-1-1v-2c0-.55.45-1 1-1s1 .45 1 1v2c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> WarningDismissable story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal dismissable colorWarning"
>
  <button
    class="dismiss button sizeLarge variantPlain colorWarning"
    type="button"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      height="1.75rem"
      role="img"
      style="--icon-size: 1.75rem;"
      viewBox="0 0 24 24"
      width="1.75rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        dismiss banner
      </title>
      <path
        d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
      />
    </svg>
  </button>
  <div
    class="iconContainer iconWarning"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        warning
      </title>
      <path
        d="M4.47 21h15.06c1.54 0 2.5-1.67 1.73-3L13.73 4.99c-.77-1.33-2.69-1.33-3.46 0L2.74 18c-.77 1.33.19 3 1.73 3zM12 14c-.55 0-1-.45-1-1v-2c0-.55.45-1 1-1s1 .45 1 1v2c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> WithAction story renders snapshot 1`] = `
<article
  class="bannerDialog horizontal colorBrand"
>
  <div
    class="iconContainer iconBrand"
  >
    <svg
      class="svgIcon"
      fill="currentColor"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        attention
      </title>
      <path
        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-1.29 1.29c-.63.63-.19 1.71.7 1.71h13.17c.89 0 1.34-1.08.71-1.71L18 16z"
      />
    </svg>
  </div>
  <div
    class="textAndAction horizontal"
  >
    <div
      class="textContent horizontal"
    >
      <h1
        class="typography sizeH3 colorInherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
       
      <p
        class="typography sizeBody colorInherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates, click into the course.
      </p>
    </div>
    <div
      class="action horizontal"
    >
      <button
        class="button sizeLarge variantOutline colorBrand"
        style="white-space: nowrap;"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;
